// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogCategoryScreen renders the blog category screen 1`] = `
<body>
  <div>
    <div
      class="w-full z-10 shadow-sm"
    >
      <div
        class="container py-5 md:py-6 flex justify-between items-center"
      >
        <a
          href="/"
        >
          <img
            alt="Logo"
            data-nimg="1"
            decoding="async"
            height="32"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="32"
          />
        </a>
        <div
          class="space-x-4"
        >
          <a
            class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            href="/projects"
          >
            Projects
          </a>
          <a
            class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            href="/me"
          >
            About Me
          </a>
        </div>
      </div>
    </div>
    <main
      class="container py-10 space-y-6"
    >
      <nav
        class="flex"
      >
        <ol
          class="inline-flex items-center space-x-2"
        >
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/"
            >
              Home
            </a>
          </li>
          <span>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0"
              fill="currentColor"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/blog"
            >
              Blog
            </a>
          </li>
          <span>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0"
              fill="currentColor"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/blog/categories"
            >
              Categories
            </a>
          </li>
          <span>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0"
              fill="currentColor"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            >
              Cracking the Coding Interview
            </a>
          </li>
        </ol>
      </nav>
      <div
        class="space-y-3"
      >
        <h1
          class="font-bold font-heading text-4xl"
        >
          Category: 
          Cracking the Coding Interview
        </h1>
        <p
          class="italic text-gray-600"
        >
          Last updated at 
          15 Oct, 2022
        </p>
      </div>
      <div
        data-testid="mdx-content"
      >
        <p
          class="my-5"
        >
          Cracking the Coding Interview: 189 Programming Questions and Solutions is a book by Gayle Laakmann McDowell about coding interviews.
        </p>
      </div>
      <ul
        aria-label="List of category's posts"
        class="space-y-1 list-disc list-inside"
        role="list"
      />
    </main>
    <footer
      class="my-6"
    >
      <div
        class="container"
      >
        <footer
          class="p-4 bg-white rounded-lg shadow flex flex-col md:flex-row md:items-center md:justify-between md:p-6"
        >
          <span
            class="text-gray-500"
          >
            © 2022
             
            <a
              class="hover:underline"
              href="https://yonycalsin.com"
            >
              Yony Calsin™
            </a>
            . All Rights Reserved.
          </span>
          <ul
            class="flex flex-wrap gap-3 items-center justify-center"
          >
            <li>
              <a
                class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
                href="/me"
              >
                About
              </a>
            </li>
            <li>
              <a
                class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
                href="/contact"
              >
                Contact
              </a>
            </li>
          </ul>
        </footer>
      </div>
    </footer>
    <div
      class="space-y-5 fixed bottom-8 left-8 hidden lg:flex flex-col"
    >
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://github.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Github
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://www.linkedin.com/in/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Linkedin
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://twitter.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Twitter
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="mailto:helloyonycalsin@gmail.com"
        rel="noreferrer"
        target="_blank"
      >
        Email
      </a>
    </div>
  </div>
</body>
`;

exports[`BlogCategoryScreen renders the list of category's posts 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="w-full z-10 shadow-sm"
      >
        <div
          class="container py-5 md:py-6 flex justify-between items-center"
        >
          <a
            href="/"
          >
            <img
              alt="Logo"
              data-nimg="1"
              decoding="async"
              height="32"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
              style="color: transparent;"
              width="32"
            />
          </a>
          <div
            class="space-x-4"
          >
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/projects"
            >
              Projects
            </a>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/me"
            >
              About Me
            </a>
          </div>
        </div>
      </div>
      <main
        class="container py-10 space-y-6"
      >
        <nav
          class="flex"
        >
          <ol
            class="inline-flex items-center space-x-2"
          >
            <li>
              <a
                class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
                href="/"
              >
                Home
              </a>
            </li>
            <span>
              <svg
                class="w-4 h-4 inline-block leading-4 shrink-0"
                fill="currentColor"
                height="1em"
                role="icon"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <li>
              <a
                class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
                href="/blog"
              >
                Blog
              </a>
            </li>
            <span>
              <svg
                class="w-4 h-4 inline-block leading-4 shrink-0"
                fill="currentColor"
                height="1em"
                role="icon"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <li>
              <a
                class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
                href="/blog/categories"
              >
                Categories
              </a>
            </li>
            <span>
              <svg
                class="w-4 h-4 inline-block leading-4 shrink-0"
                fill="currentColor"
                height="1em"
                role="icon"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <li>
              <a
                class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              >
                Cracking the Coding Interview
              </a>
            </li>
          </ol>
        </nav>
        <div
          class="space-y-3"
        >
          <h1
            class="font-bold font-heading text-4xl"
          >
            Category: 
            Cracking the Coding Interview
          </h1>
          <p
            class="italic text-gray-600"
          >
            Last updated at 
            15 Oct, 2022
          </p>
        </div>
        <div
          data-testid="mdx-content"
        >
          <p
            class="my-5"
          >
            Cracking the Coding Interview: 189 Programming Questions and Solutions is a book by Gayle Laakmann McDowell about coding interviews.
          </p>
        </div>
        <ul
          aria-label="List of category's posts"
          class="space-y-1 list-disc list-inside"
          role="list"
        >
          <a
            class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            href="/blog/how-to-mock-a-rest-api"
          >
            <li>
              How to mock a rest api
            </li>
          </a>
        </ul>
      </main>
      <footer
        class="my-6"
      >
        <div
          class="container"
        >
          <footer
            class="p-4 bg-white rounded-lg shadow flex flex-col md:flex-row md:items-center md:justify-between md:p-6"
          >
            <span
              class="text-gray-500"
            >
              © 2022
               
              <a
                class="hover:underline"
                href="https://yonycalsin.com"
              >
                Yony Calsin™
              </a>
              . All Rights Reserved.
            </span>
            <ul
              class="flex flex-wrap gap-3 items-center justify-center"
            >
              <li>
                <a
                  class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
                  href="/me"
                >
                  About
                </a>
              </li>
              <li>
                <a
                  class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
                  href="/contact"
                >
                  Contact
                </a>
              </li>
            </ul>
          </footer>
        </div>
      </footer>
      <div
        class="space-y-5 fixed bottom-8 left-8 hidden lg:flex flex-col"
      >
        <a
          class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
          href="https://github.com/yonycalsin"
          rel="noreferrer"
          target="_blank"
        >
          Github
        </a>
        <a
          class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
          href="https://www.linkedin.com/in/yonycalsin"
          rel="noreferrer"
          target="_blank"
        >
          Linkedin
        </a>
        <a
          class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
          href="https://twitter.com/yonycalsin"
          rel="noreferrer"
          target="_blank"
        >
          Twitter
        </a>
        <a
          class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
          href="mailto:helloyonycalsin@gmail.com"
          rel="noreferrer"
          target="_blank"
        >
          Email
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-full z-10 shadow-sm"
    >
      <div
        class="container py-5 md:py-6 flex justify-between items-center"
      >
        <a
          href="/"
        >
          <img
            alt="Logo"
            data-nimg="1"
            decoding="async"
            height="32"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="32"
          />
        </a>
        <div
          class="space-x-4"
        >
          <a
            class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            href="/projects"
          >
            Projects
          </a>
          <a
            class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            href="/me"
          >
            About Me
          </a>
        </div>
      </div>
    </div>
    <main
      class="container py-10 space-y-6"
    >
      <nav
        class="flex"
      >
        <ol
          class="inline-flex items-center space-x-2"
        >
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/"
            >
              Home
            </a>
          </li>
          <span>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0"
              fill="currentColor"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/blog"
            >
              Blog
            </a>
          </li>
          <span>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0"
              fill="currentColor"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/blog/categories"
            >
              Categories
            </a>
          </li>
          <span>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0"
              fill="currentColor"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            >
              Cracking the Coding Interview
            </a>
          </li>
        </ol>
      </nav>
      <div
        class="space-y-3"
      >
        <h1
          class="font-bold font-heading text-4xl"
        >
          Category: 
          Cracking the Coding Interview
        </h1>
        <p
          class="italic text-gray-600"
        >
          Last updated at 
          15 Oct, 2022
        </p>
      </div>
      <div
        data-testid="mdx-content"
      >
        <p
          class="my-5"
        >
          Cracking the Coding Interview: 189 Programming Questions and Solutions is a book by Gayle Laakmann McDowell about coding interviews.
        </p>
      </div>
      <ul
        aria-label="List of category's posts"
        class="space-y-1 list-disc list-inside"
        role="list"
      >
        <a
          class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
          href="/blog/how-to-mock-a-rest-api"
        >
          <li>
            How to mock a rest api
          </li>
        </a>
      </ul>
    </main>
    <footer
      class="my-6"
    >
      <div
        class="container"
      >
        <footer
          class="p-4 bg-white rounded-lg shadow flex flex-col md:flex-row md:items-center md:justify-between md:p-6"
        >
          <span
            class="text-gray-500"
          >
            © 2022
             
            <a
              class="hover:underline"
              href="https://yonycalsin.com"
            >
              Yony Calsin™
            </a>
            . All Rights Reserved.
          </span>
          <ul
            class="flex flex-wrap gap-3 items-center justify-center"
          >
            <li>
              <a
                class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
                href="/me"
              >
                About
              </a>
            </li>
            <li>
              <a
                class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
                href="/contact"
              >
                Contact
              </a>
            </li>
          </ul>
        </footer>
      </div>
    </footer>
    <div
      class="space-y-5 fixed bottom-8 left-8 hidden lg:flex flex-col"
    >
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://github.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Github
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://www.linkedin.com/in/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Linkedin
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://twitter.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Twitter
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="mailto:helloyonycalsin@gmail.com"
        rel="noreferrer"
        target="_blank"
      >
        Email
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
